--- a/CapaDatos/app.config
+++ b/CapaDatos/app.config
@@ -4,13 +4,13 @@
     </configSections>
     <connectionStrings>
         <add name="CapaDatos.Properties.Settings.SembrarConnectionString"
-            connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString"
-            connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString1"
-            connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;Name=EntityFramework"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
