Adición de funcionalidad de visualización de cuestionarios respondidos (temporal)

--- a/Sembrar/Sembrar.csproj
+++ b/Sembrar/Sembrar.csproj
@@ -673,6 +673,7 @@
     <Content Include="Administrador\crystalreportviewers13\prompting\js\promptengine_strings_zh_TW.js" />
     <Content Include="Administrador\crystalreportviewers13\urlreporting\activexviewer.js" />
     <Content Include="Administrador\crystalreportviewers13\urlreporting\appletviewer.js" />
+    <Content Include="Administrador\frmVerCuestionario.aspx" />
     <Content Include="Administrador\frmReporteAsistenciaAnualReuniones.aspx" />
     <Content Include="Administrador\frmReporteAsistenciaPorPersona.aspx" />
     <Content Include="Administrador\frmEliminarPersona.aspx" />
@@ -2454,6 +2455,7 @@
     <Content Include="Digitador\frmIngresarNinio.aspx" />
     <Content Include="Digitador\frmManejoMatriculas.aspx" />
     <Content Include="Digitador\frmMiPerfil.aspx" />
+    <Content Include="Digitador\frmVerCuestionario.aspx" />
     <Content Include="Digitador\frmModificarCuestionario.aspx" />
     <Content Include="Digitador\frmResponderCuestionario.aspx" />
     <Content Include="Digitador\frmVerPersonas.aspx" />
@@ -2489,6 +2491,7 @@
     <Content Include="Orientador\frmIngresarNinio.aspx" />
     <Content Include="Orientador\frmIngresarReunion.aspx" />
     <Content Include="Orientador\frmManejoMatriculas.aspx" />
+    <Content Include="Orientador\frmVerCuestionario.aspx" />
     <Content Include="Orientador\frmModificarCuestionario.aspx" />
     <Content Include="Orientador\frmReporteAsistenciaAnual.aspx" />
     <Content Include="Orientador\frmReporteAsistenciaAnualReunion.aspx" />
@@ -3271,6 +3274,13 @@
       <DependentUpon>CrystalReport2.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Administrador\frmVerCuestionario.aspx.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Administrador\frmVerCuestionario.aspx.designer.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Administrador\frmReporteAsistenciaAnualReuniones.aspx.cs">
       <DependentUpon>frmReporteAsistenciaAnualReuniones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -3797,6 +3807,13 @@
     <Compile Include="Digitador\frmMiPerfil.aspx.designer.cs">
       <DependentUpon>frmMiPerfil.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Digitador\frmVerCuestionario.aspx.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Digitador\frmVerCuestionario.aspx.designer.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Digitador\frmModificarCuestionario.aspx.cs">
       <DependentUpon>frmModificarCuestionario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -3936,6 +3953,13 @@
     </Compile>
     <Compile Include="Orientador\frmManejoMatriculas.aspx.designer.cs">
       <DependentUpon>frmManejoMatriculas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Orientador\frmVerCuestionario.aspx.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Orientador\frmVerCuestionario.aspx.designer.cs">
+      <DependentUpon>frmVerCuestionario.aspx</DependentUpon>
     </Compile>
     <Compile Include="Orientador\frmModificarCuestionario.aspx.cs">
       <DependentUpon>frmModificarCuestionario.aspx</DependentUpon>
