Constructores en las claes capa negocio final

--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -60,6 +60,7 @@
     <Compile Include="clsNProceso.cs" />
     <Compile Include="clsNRelacionPR_LA_ORI.cs" />
     <Compile Include="clsNSolucionCuestionario.cs" />
+    <Compile Include="clsNTipoAsistentes.cs" />
     <Compile Include="clsNTipoPersona.cs" />
     <Compile Include="clsOrientador.cs" />
     <Compile Include="clsParentesco.cs" />
