Cambios Alejandro Sanchez

--- a/Sembrar/Web.config
+++ b/Sembrar/Web.config
@@ -39,6 +39,10 @@
 
   </connectionStrings>
   <system.web>
+    <!--trust level="Full"/>
+    <securityPolicy>
+      <trustLevel name="Full" policyFile="internal"/>
+    </securityPolicy!-->
     <customErrors mode="Off"/>
     <authentication mode="Forms" />
     <membership defaultProvider="SqlProvider" userIsOnlineTimeWindow="60">
