--- a/Sembrar/Administrador/Web.config
+++ b/Sembrar/Administrador/Web.config
@@ -25,7 +25,11 @@
     <add key="CrystalImageCleaner-Sleep" value="60000" />
     <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
-    <system.web>
+  <system.web>
+    <!--trust level="Full"/>
+    <securityPolicy>
+      <trustLevel name="Full" policyFile="internal"/>
+    </securityPolicy-->
       <compilation debug="true" targetFramework="4.0">
         <assemblies>
           <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
