--- a/Sembrar/Reportes/Web.config
+++ b/Sembrar/Reportes/Web.config
@@ -3,8 +3,11 @@
   <configSections>
     </configSections>
 
-    <system.web>
-      
+  <system.web>
+    <trust level="Full"/>
+    <securityPolicy>
+      <trustLevel name="Full" policyFile="internal"/>
+    </securityPolicy>
       <authorization>
         <deny users="?"/>
         <deny roles="Tecnico"/>
