--- a/CapaDatos/app.config
+++ b/CapaDatos/app.config
@@ -12,5 +12,8 @@
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString1"
             connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;Name=EntityFramework"
             providerName="System.Data.SqlClient" />
+        <add name="CapaDatos.Properties.Settings.SembrarDesarrolloConnectionString"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI;Password=SAEDI.2018*"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
