Adaptar el cambio de tipo de proceso en la base de datos a la aplicación

--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -79,6 +79,7 @@
     <Compile Include="clsDSolucionCuestionario.cs" />
     <Compile Include="clsDTipoAsistente.cs" />
     <Compile Include="clsDTipoPersona.cs" />
+    <Compile Include="clsDTipoProceso.cs" />
     <Compile Include="clsUsuario.cs" />
     <Compile Include="DataSetPersonas.Designer.cs">
       <AutoGen>True</AutoGen>
