--- a/Sembrar/Web.config
+++ b/Sembrar/Web.config
@@ -25,16 +25,16 @@
     <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
   <connectionStrings>
-    <add name="cadena" connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;Application Name=EntityFramework"
+    <add name="cadena" connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;Application Name=EntityFramework"
        providerName="System.Data.SqlClient" />
-    <add name="SembrarConnectionString" connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;"
+    <add name="SembrarConnectionString" connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;"
       providerName="System.Data.SqlClient" />
     <add name="SembrarEntities" connectionString="metadata=res://*/SurveyAppContext.csdl|res://*/SurveyAppContext.ssdl|res://*/SurveyAppContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="Sembrar2ConnectionString" connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;Application Name=EntityFramework"
+    <add name="Sembrar2ConnectionString" connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*;Application Name=EntityFramework"
       providerName="System.Data.SqlClient" />
     <add name="MyConnectionString"
-         connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*"
+         connectionString="Data Source=208.91.198.174;Initial Catalog=Sembrar2;User ID=adminSAEDI; Password=SAEDI.2018*"
          providerName="System.Data.SqlClient" />
 
   </connectionStrings>
@@ -91,11 +91,6 @@
       <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
     </httpHandlers>
     <pages styleSheetTheme=""></pages>
-    <!--cookieless="true"
-      regenerateExpiredSessionId="true"-->
-    <sessionState   cookieless="true"
-      regenerateExpiredSessionId="true"               
-                  timeout ="40"/>
   </system.web>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
