--- a/CapaDatos/app.config
+++ b/CapaDatos/app.config
@@ -4,16 +4,16 @@
     </configSections>
     <connectionStrings>
         <add name="CapaDatos.Properties.Settings.SembrarConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString1"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;Name=EntityFramework"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*;Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.SembrarDesarrolloConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True"
+            connectionString="Data Source=208.91.198.174;Initial Catalog=SembrarDesarrollo;User ID=adminSAEDI; Password=SAEDI.2018*"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
