--- a/CapaDatos/app.config
+++ b/CapaDatos/app.config
@@ -4,16 +4,16 @@
     </configSections>
     <connectionStrings>
         <add name="CapaDatos.Properties.Settings.SembrarConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=.;Initial Catalog=Sembrar2;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+            connectionString="Data Source=.;Initial Catalog=Sembrar2;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
             providerName="System.Data.SqlClient" />
         <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString1"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True;Name=EntityFramework"
+            connectionString="Data Source=.;Initial Catalog=Sembrar2;Integrated Security=True;Name=EntityFramework"
             providerName="System.Data.SqlClient" />
-        <add name="CapaDatos.Properties.Settings.SembrarDesarrolloConnectionString"
-            connectionString="Data Source=.;Initial Catalog=SembrarDesarrollo;Integrated Security=True"
+        <add name="CapaDatos.Properties.Settings.Sembrar2ConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Sembrar2;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
